Reworked Controllers, improved animation API

--- a/src/main/resources/view/css/dark.css
+++ b/src/main/resources/view/css/dark.css
@@ -6,18 +6,26 @@
     -fx-background-color: -grey-800;
 }
 
-.label, .dialog-close, .jfx-toggle-button {
+.label, .dialog-close, .jfx-toggle-button, .jfx-text-field, .instance-type-button {
     -fx-text-fill: white;
 }
 
 .jfx-rippler {
-    -jfx-rippler-fill: white;
+    -jfx-rippler-fill: -grey-500;
 }
 
-.settings-button {
+.settings-button, .instance-type-button {
     -fx-background-color: black;
 }
 
 .settings-button .glyph-icon, .back-button .glyph-icon {
     -fx-fill: white;
+}
+
+.jfx-text-field {
+    -jfx-focus-color: white;
+}
+
+.curseforge-svg {
+    -fx-background-color: white;
 }
