--- a/src/main/resources/view/css/light.css
+++ b/src/main/resources/view/css/light.css
@@ -2,7 +2,7 @@
     -fx-background-color: -grey-50;
 }
 
-.settings-button {
+.settings-button, .instance-type-button {
     -fx-background-color: white;
 }
 
