--- a/src/main/resources/view/fxml/Main.fxml
+++ b/src/main/resources/view/fxml/Main.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.StackPane?>
-<StackPane xmlns:fx="http://javafx.com/fxml/1" id="root" fx:id="root" xmlns="http://javafx.com/javafx/8.0.201-ea"
+<StackPane xmlns:fx="http://javafx.com/fxml/1" id="root" xmlns="http://javafx.com/javafx/8.0.201-ea"
            fx:controller="com.github.franckyi.emerald.controller.MainController">
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
