--- a/src/main/resources/view/fxml/NewVanillaInstance.fxml
+++ b/src/main/resources/view/fxml/NewVanillaInstance.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
+<?import com.jfoenix.controls.JFXRippler?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXToolbar?>
 <?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <?import java.lang.String?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.201-ea"
-            fx:controller="com.github.franckyi.emerald.controller.SettingsController">
+            fx:controller="com.github.franckyi.emerald.controller.NewVanillaInstanceController">
     <top>
         <JFXToolbar BorderPane.alignment="CENTER">
             <left>
@@ -21,21 +23,17 @@
                 </JFXRippler>
             </left>
             <center>
-                <Label styleClass="display1" text="Settings" BorderPane.alignment="CENTER"/>
+                <Label styleClass="display1" text="Create new Vanilla instance" BorderPane.alignment="CENTER"/>
             </center>
             <right>
-                <JFXRippler maskType="CIRCLE" onMouseClicked="#infoAction" BorderPane.alignment="CENTER">
+                <JFXRippler maskType="CIRCLE" onMouseClicked="#homeAction" BorderPane.alignment="CENTER">
+                    <StackPane>
+                        <MaterialIconView glyphName="HOME"/>
+                    </StackPane>
                     <styleClass>
                         <String fx:value="back-button"/>
                         <String fx:value="custom-button"/>
                     </styleClass>
-                    <control>
-                        <StackPane>
-                            <children>
-                                <MaterialIconView glyphName="INFO"/>
-                            </children>
-                        </StackPane>
-                    </control>
                 </JFXRippler>
             </right>
         </JFXToolbar>
@@ -43,24 +41,13 @@
     <center>
         <VBox alignment="CENTER" BorderPane.alignment="CENTER">
             <children>
-                <JFXToggleButton fx:id="darkThemeToggle" text="Dark Theme" toggleColor="#fafafa"
-                                 toggleLineColor="#4caf50" unToggleLineColor="#f44336" styleClass="subhead"/>
+                <HBox alignment="CENTER" spacing="20.0">
+                    <children>
+                        <Label styleClass="subhead" text="Instance name"/>
+                        <JFXTextField fx:id="instanceFieldName"/>
+                    </children>
+                </HBox>
             </children>
         </VBox>
     </center>
-    <bottom>
-        <JFXDialog fx:id="dialog" transitionType="CENTER">
-            <JFXDialogLayout>
-                <heading>
-                    <Label>Emerald v0.0.1</Label>
-                </heading>
-                <body>
-                    <Label>Created by Franckyi</Label>
-                </body>
-                <actions>
-                    <JFXButton onAction="#closeDialogAction" styleClass="dialog-close">CLOSE</JFXButton>
-                </actions>
-            </JFXDialogLayout>
-        </JFXDialog>
-    </bottom>
 </BorderPane>
