--- a/src/main/resources/view/fxml/InstanceList.fxml
+++ b/src/main/resources/view/fxml/InstanceList.fxml
@@ -2,8 +2,11 @@
 
 
 <?import com.jfoenix.controls.JFXMasonryPane?>
+<?import javafx.geometry.Insets?>
 <JFXMasonryPane xmlns:fx="http://javafx.com/fxml/1" HSpacing="20.0" VSpacing="20.0"
                 xmlns="http://javafx.com/javafx/8.0.201-ea"
                 fx:controller="com.github.franckyi.emerald.controller.InstanceListController">
-
+    <padding>
+        <Insets topRightBottomLeft="20"/>
+    </padding>
 </JFXMasonryPane>
