--- a/src/main/resources/view/fxml/NewVanillaInstance.fxml
+++ b/src/main/resources/view/fxml/NewVanillaInstance.fxml
@@ -1,52 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXRippler?>
-<?import com.jfoenix.controls.JFXTextField?>
-<?import com.jfoenix.controls.JFXToolbar?>
+<?import com.jfoenix.controls.*?>
 <?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
-<?import java.lang.String?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.201-ea"
             fx:controller="com.github.franckyi.emerald.controller.NewVanillaInstanceController">
     <top>
-        <JFXToolbar BorderPane.alignment="CENTER">
+        <JFXToolbar BorderPane.alignment="CENTER" styleClass="menu-header">
             <left>
-                <JFXRippler maskType="CIRCLE" onMouseClicked="#backAction" BorderPane.alignment="CENTER">
+                <JFXRippler maskType="CIRCLE" onMouseClicked="#backAction" BorderPane.alignment="CENTER"
+                            styleClass="navigation-button">
                     <StackPane>
                         <MaterialIconView glyphName="ARROW_BACK"/>
                     </StackPane>
-                    <styleClass>
-                        <String fx:value="back-button"/>
-                        <String fx:value="custom-button"/>
-                    </styleClass>
                 </JFXRippler>
             </left>
             <center>
-                <Label styleClass="display1" text="Create new Vanilla instance" BorderPane.alignment="CENTER"/>
+                <Label text="Create new Vanilla instance" BorderPane.alignment="CENTER"/>
             </center>
             <right>
-                <JFXRippler maskType="CIRCLE" onMouseClicked="#homeAction" BorderPane.alignment="CENTER">
+                <JFXRippler maskType="CIRCLE" onMouseClicked="#homeAction" BorderPane.alignment="CENTER"
+                            styleClass="navigation-button">
                     <StackPane>
                         <MaterialIconView glyphName="HOME"/>
                     </StackPane>
-                    <styleClass>
-                        <String fx:value="back-button"/>
-                        <String fx:value="custom-button"/>
-                    </styleClass>
                 </JFXRippler>
             </right>
         </JFXToolbar>
     </top>
     <center>
-        <VBox alignment="CENTER" BorderPane.alignment="CENTER">
+        <VBox alignment="CENTER" fillWidth="false" spacing="20" BorderPane.alignment="CENTER">
             <children>
-                <HBox alignment="CENTER" spacing="20.0">
+                <HBox alignment="CENTER" spacing="20.0" styleClass="surface">
                     <children>
                         <Label styleClass="subhead" text="Instance name"/>
-                        <JFXTextField fx:id="instanceFieldName"/>
+                        <JFXTextField fx:id="instanceNameField"/>
                     </children>
                 </HBox>
+                <HBox alignment="CENTER" spacing="20.0">
+                    <children>
+                        <VBox styleClass="surface">
+                            <children>
+                                <JFXTreeTableView fx:id="versionTableView" fixedCellSize="25" prefHeight="200"
+                                                  prefWidth="400" showRoot="false">
+                                    <columns>
+                                        <JFXTreeTableColumn fx:id="latestColumn" editable="false" prefWidth="20"
+                                                            resizable="false" sortable="false"/>
+                                        <JFXTreeTableColumn fx:id="versionColumn" editable="false" prefWidth="150"
+                                                            resizable="false" sortable="false" text="Version"/>
+                                        <JFXTreeTableColumn fx:id="typeColumn" editable="false" prefWidth="100"
+                                                            resizable="false" sortable="false" text="Type"/>
+                                        <JFXTreeTableColumn fx:id="dateColumn" editable="false" prefWidth="100"
+                                                            resizable="false" sortable="false" text="Date"/>
+                                    </columns>
+                                </JFXTreeTableView>
+                            </children>
+                        </VBox>
+                        <VBox alignment="CENTER_LEFT" spacing="20.0" styleClass="surface">
+                            <children>
+                                <JFXCheckBox fx:id="showReleasesCheckbox" selected="true" styleClass="subhead"
+                                             text="Show Releases"/>
+                                <JFXCheckBox fx:id="showSnapshotsCheckbox" styleClass="subhead" text="Show Snapshots"/>
+                                <JFXCheckBox fx:id="showBetaVersionsCheckbox" styleClass="subhead"
+                                             text="Show Beta versions"/>
+                                <JFXCheckBox fx:id="showAlphaVersionsCheckbox" styleClass="subhead"
+                                             text="Show Alpha versions"/>
+                            </children>
+                        </VBox>
+                    </children>
+                </HBox>
+                <JFXButton fx:id="createInstanceButton" disable="true" styleClass="button-success"
+                           text="Create instance" onAction="#createInstanceAction">
+                    <graphic>
+                        <MaterialIconView glyphName="CREATE_NEW_FOLDER" size="24.0"/>
+                    </graphic>
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                    </padding>
+                </JFXButton>
             </children>
         </VBox>
     </center>
