New animations, View/Controller reorganization

--- a/src/main/resources/view/css/dark.css
+++ b/src/main/resources/view/css/dark.css
@@ -10,6 +10,7 @@
     -primary: #BB86FC;
 
     -text-color: -white;
+    -button-text-color: -white;
     -background-color: -dark1;
     -surface-color: -dark2;
     -surface-color2: -dark3;
