--- a/src/main/resources/view/css/light.css
+++ b/src/main/resources/view/css/light.css
@@ -3,6 +3,7 @@
     -primary-variant: #3700B3;
 
     -text-color: -black;
+    -button-text-color: -primary;
     -background-color: -white;
     -surface-color: -white;
     -surface-color2: -white;
