--- a/src/main/resources/view/fxml/NewVanillaInstance.fxml
+++ b/src/main/resources/view/fxml/NewVanillaInstance.fxml
@@ -31,7 +31,7 @@
         </JFXToolbar>
     </top>
     <center>
-        <VBox alignment="CENTER" fillWidth="false" spacing="20" BorderPane.alignment="CENTER">
+        <VBox alignment="CENTER" fillWidth="false" spacing="20" BorderPane.alignment="CENTER" styleClass="container">
             <children>
                 <HBox alignment="CENTER" spacing="20.0" styleClass="surface">
                     <children>
